# machine-learning-project

./: pyproject.toml
documentation/: 01_notas_week_1.docx  ~$_notas_week_1.docx
notebooks/: 01_homework_week_01.ipynb
