[tool.poetry]
name = "Machine Learning Zoomcamp"
version = "0.1.0"
description = "\"Machine Learning Zoomcamp\""
authors = ["Santiago Higuita <santiagohiguitau1030@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
loguru = "^0.7.2"
pandas = "2.2.2"
requests = "^2.32.3"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
tqdm = "^4.66.5"
pyarrow = "^17.0.0"
seaborn = "^0.13.2"
polars = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
